2010-01-26
 - create functionality to 'add connections' by click'n'drag'n'drop is done
 - modules can now be moved again but using the red line for connections works as well
2010-01-25
 - summary: inserting connections works no backend wise
   - Model.h/cpp insertConnection(..) rewritten
   - DataAbstractModule ...
   - DataConnection.cpp/.h needs rewriting
 - Port(s) are now created according to the module settings
 - added int ports(int type) to DataAbstractModule, with this function the view 
   (read class Module : public QGraphicsItem) can query via the model how many Port(s)
   are needed per type.

2010-01-24
 - QGraphicsItem(s) query the model with modelData(..)/setModelData(..) and they use
   GraphicsItemModelExtension for that which is also an abstract base class to force
   the final item to implement type() and some other functions which are very important
   for the QGraphicsScene <-> QAbstractItemModel overlay to be there.

2010-01-23
 - QGraphicsItem(s) in automate have the 'model extension' given by a multiple inheritence 'inheriting class'
   using GraphicsItemModelExtension now makes data(..)/setData(..) very easy! ;)

 - graphicsview must position right over 0/0 above the scene
 - adding an item SHOULD NOT move the VIEW (GraphicsView)
   POSSIBLE FIX: doc->scene->setSceneRect(QRect(-width/2,-height/2,width,height));
    but using this results in no scrollbars and the scene does not exapand at all....
   FINAL FIX
      void GraphicsView::resizeEvent(QResizeEvent* event) {
        QRectF v = sceneRect();
        setSceneRect(v.x(),v.y(),v.width(),v.height());
      } 
 - moving an item SHOULD NOT expand the VIEW
   POSSIBLE FIX: rewrite the resize() and keep it at width()/height() instead of the
                 real scene's sceneRect() which can be greater
   FINAL FIX
      see void GraphicsView::resizeEvent(QResizeEvent* event) {

 - the scrollbars should indicated NOT how big the document is BUT instead