@@ -53,31 +53,50 @@ void GraphicsScene::setLoadableModuleNames ( QVector<QString> loadableModuleName
     this->loadableModuleNames=loadableModuleNames;
 }
 
+/*!
+ * inserts a Connection object which represents a QModelIndex of the Model
+ * we know a lot about the connection but we must find out which ports are
+ * used as parents for the connection (Module(s) are no parents) but are used to
+ * find the Port(s)
+ */
 //FIXME this code has serious bugs and needs refactoring and testing
 QGraphicsItem* GraphicsScene::connectionInserted ( QPersistentModelIndex cItem ) {
-    // 0. src QPersistentModelIndex (this is given with parent())
-    Module* smItem = static_cast<Module*> ( modelToSceenIndex ( cItem.parent() ) );
-    
-    // 1. dst QPersistentModelIndex (that is to be queried via the model)
+    // 0. dst QPersistentModelIndex (that is to be queried via the model)
     QPersistentModelIndex dItem = QPersistentModelIndex(model->dst(cItem));
+
+    Module* srcModule = dynamic_cast<Module*> ( modelToSceenIndex ( cItem.parent() ) );
+    Module* dstModule = dynamic_cast<Module*> ( modelToSceenIndex ( dItem ) );
+    qDebug() << "src " << srcModule->m_label;
+    qDebug() << "dst " << dstModule->m_label;
+    if (srcModule == NULL) {
+      qDebug() << "srcModule == NULL";
+      exit(1);
+    }
+    if (dstModule == NULL) {
+      qDebug() << "dstModule == NULL";
+      exit(1);
+    }
+    if (srcModule == dstModule) {
+      qDebug() << "srcModule == dstModule";
+      exit(1);
+    }
     
-    Module* srcModule = static_cast<Module*> ( modelToSceenIndex ( smItem->index() ) );
-    Module* dstModule = static_cast<Module*> ( modelToSceenIndex ( dItem ) );
-    
-    // 2. type,number for both sides
+    // 1. type, number for both sides
     int srcPortType   = model->data(cItem, customRole::SrcPortTypeRole).toInt();
     int srcPortNumber = model->data(cItem, customRole::SrcPortNumberRole).toInt();;
     qDebug() << "src " << srcModule->m_label<< " porttype: " << srcPortType << " portnumber" << srcPortNumber;
     Port* srcPort = srcModule->resolvePort(srcPortType, srcPortNumber);
     
     // using sItem here is not wrong since dst/src query in DataConnection is context sensitive
-    int dstPortType   = model->data(cItem, customRole::DstPortTypeRole).toInt();;
+    int dstPortType   = model->data(cItem, customRole::DstPortTypeRole).toInt();
     int dstPortNumber = model->data(cItem, customRole::DstPortNumberRole).toInt();
     qDebug() << "dst " << dstModule->m_label<< " porttype: " << dstPortType << " portnumber" << dstPortNumber;
     Port* dstPort = dstModule->resolvePort(dstPortType, dstPortNumber);
 
     Connection* connection = new Connection ( cItem, model, srcPort, dstPort );
     addItem ( connection );
+    exit(1);
+    qDebug() << __PRETTY_FUNCTION__ << "added a connection sucessfully";
     return connection;
 }
 
@@ -85,7 +104,6 @@ QGraphicsItem* GraphicsScene::moduleInserted ( QPersistentModelIndex item ) {
 //   qDebug() << __PRETTY_FUNCTION__;
     Module* module = new Module ( model, item );
     addItem ( module );
-    module->setPos ( model->data ( item, customRole::PosRole ).toPoint() );
     return module;
 }
 
